<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment android:id="@+id/mapFragment"
        android:name="com.pbcplume.tracker.ui.map.MapFragment"
        android:label="@string/title_map">
        <action android:id="@+id/action_map_to_settings"
            app:destination="@id/settingsFragment" />
        <action android:id="@+id/action_map_to_debug"
            app:destination="@id/debugFragment" />
    </fragment>

    <fragment android:id="@+id/settingsFragment"
        android:name="com.pbcplume.tracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment android:id="@+id/debugFragment"
        android:name="com.pbcplume.tracker.ui.debug.DebugFragment"
        android:label="@string/title_debug" />

</navigation>
